[package]
name = "ifttt_webhook_rust"
version = "0.2.1"
authors = ["sinyo-matu <seelerei0130@gmail.com>"]
edition = "2018"
license = "MIT"
description = "a convenient tool for trigger ifttt's webhooks"
categories = ["api-bindings","development-tools"]
keywords = ["api","ifttt","webhook"]
repository = "https://github.com/sinyo-matu/ifttt_webhook_rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=["blocking"]
blocking=["ureq"]
non-blocking=["reqwest"]
delay=["non-blocking","tokio"]


[dependencies]
reqwest = {version="0.11.2",features=["json"],optional=true}
ureq = {version="2.0.2",features=["json"],optional=true}
tokio={version="1.0.0",features=["time","rt"],optional=true}

[dev-dependencies]
dotenv = "0.15.0"
tokio ={version="1.0.0",features=["full"]}
